--- a/src/web-app/ClientApp/src/index.css
+++ b/src/web-app/ClientApp/src/index.css
@@ -1,6 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic&subset=latin,latin-ext');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
+:root {
+  --primary-color: rgba(38, 65, 138, 1);
+  --primary-color-09: rgba(38, 65, 138, 0.9);
+  --primary-color-08: rgba(38, 65, 138, 0.8);
+  --primary-color-07: rgba(38, 65, 138, 0.7);
+  --primary-color-06: rgba(38, 65, 138, 0.6);
+  --primary-color-05: rgba(38, 65, 138, 0.5);
+  --primary-color-04: rgba(38, 65, 138, 0.4);
+  --primary-color-03: rgba(38, 65, 138, 0.3);
+  --primary-color-02: rgba(38, 65, 138, 0.2);
+  --primary-color-01: rgba(38, 65, 138, 0.1);
+}
+
+
 html {
   min-height: calc(100% + env(safe-area-inset-top));
   -webkit-text-size-adjust: 100%;
@@ -10,7 +24,7 @@ body {
   margin: 0;
   color: #454545;
   padding: 0;
-  background-color: #faf9f8;
+  background-color: #FFFFFF;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -21,4 +35,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  margin: 0;
+  padding: 0;
+}
+
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
 }
